--- a/styles.css
+++ b/styles.css
@@ -8,26 +8,34 @@
   --Instagram1: hsl(37, 97%, 70%);
   --Instagram2: hsl(329, 70%, 58%);
   /* light theme */
-  --Toggle-btn-light: hsl(230, 22%, 74%);
-  --White-BG: hsl(0, 0%, 100%);
-  --Very-Pale-Blue-Top-BG-Pattern: hsl(225, 100%, 98%);
-  --Light-Grayish-Blue-Card-BG: hsl(227, 47%, 96%);
-  --Light-Grayish-Blue-Card-BG-hover: hsl(210deg 24% 91%);
-  --Dark-Grayish-Blue-Text: hsl(228, 12%, 44%);
-  --Very-Dark-Blue-Text: hsl(230, 17%, 14%);
-
+  --Toggle-btn-bg: hsl(230, 22%, 74%); /* done */
+  --body-BG: hsl(0, 0%, 100%); /* done */
+  --Top-BG-Pattern: hsl(225, 100%, 98%); /* done */
+  --Card-BG: hsl(227, 47%, 96%); /* done */
+  --Card-BG-hover: hsl(210deg 24% 91%); /* done */
+  --Pale-Text: hsl(228, 12%, 44%); /* done */
+  --Pale-Text-white: hsl(228, 12%, 44%); /* done */
+  --Main-Text: hsl(230, 17%, 14%); /* done */
+  --toggle-circle: hsl(0, 0%, 100%); /*  */
+}
+.dark-theme {
   /* dark theme */
-  --Toggle-btn-dark: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
-  --Very-Dark-Blue-BG: hsl(230, 17%, 14%);
-  --Very-Dark-Blue-Top-BG-Pattern: hsl(232, 19%, 15%);
-  --Dark-Desaturated-Blue-Card-BG: hsl(228, 28%, 20%);
-  --Dark-Desaturated-Blue-Card-BG-hover: hsl(228deg 31% 23%);
-  --Desaturated-Blue-Text: hsl(228, 34%, 66%);
-  --White-Text: hsl(0, 0%, 100%);
+  --Toggle-btn-bg: linear-gradient(
+    90deg,
+    hsl(210, 78%, 56%),
+    hsl(146, 68%, 55%)
+  ); /*  */
+  --body-BG: hsl(230, 17%, 14%); /*  */
+  --Top-BG-Pattern: hsl(232, 19%, 15%); /*  */
+  --Card-BG: hsl(228, 28%, 20%); /*  */
+  --Card-BG-hover: hsl(228deg 31% 23%); /*  */
+  --Pale-Text: hsl(228, 34%, 66%); /*  */
+  --Pale-Text-white: hsl(0, 0%, 100%); /* done */
+  --Main-Text: hsl(0, 0%, 100%); /*  */
+  --toggle-circle: hsl(230, 17%, 14%); /*  */
 }
 html {
   font-size: 14px;
-  color: var(--Very-Dark-Blue-Text);
 }
 * {
   font-family: "Inter", sans-serif;
@@ -36,7 +44,7 @@ html {
   border: 0;
 }
 body {
-  background-color: var(--White-BG);
+  background-color: var(--body-BG);
 }
 .bgtop {
   position: absolute;
@@ -44,7 +52,7 @@ body {
   height: 30%;
   top: 0;
   left: 0;
-  background-color: var(--Very-Pale-Blue-Top-BG-Pattern);
+  background-color: var(--Top-BG-Pattern);
   z-index: -5;
 }
 main#page-container {
@@ -60,12 +68,13 @@ section#page-head {
 }
 .intro h1 {
   font-size: 1.8rem;
+  color: var(--Main-Text);
 }
 .intro p {
   font-size: 1.1rem;
   font-weight: 600;
   margin-top: 5px;
-  color: var(--Dark-Grayish-Blue-Text);
+  color: var(--Pale-Text);
 }
 .swap {
   display: flex;
@@ -73,7 +82,7 @@ section#page-head {
   gap: 8px;
   font-size: 1.1rem;
   font-weight: 600;
-  color: var(--Dark-Grayish-Blue-Text);
+  color: var(--Pale-Text);
 }
 label.switch {
   position: relative;
@@ -93,7 +102,7 @@ span.slider {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: var(--Toggle-btn-light);
+  background: var(--Toggle-btn-bg);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 30px;
@@ -106,21 +115,17 @@ span.slider::before {
   width: 21px;
   right: 4px;
   bottom: 3px;
-  background-color: var(--White-Text);
+  background-color: var(--toggle-circle);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 50%;
 }
 input#swap-btn:checked + span.slider {
-  background-image: linear-gradient(
-    90deg,
-    hsl(210, 78%, 56%),
-    hsl(146, 68%, 55%)
-  );
+  background-image: var(--Toggle-btn-bg);
 }
 input#swap-btn:checked + .slider::before {
   transform: translateX(-26px);
-  background-color: var(--Dark-Desaturated-Blue-Card-BG);
+  background-color: var(--Card-BG);
 }
 
 hr {
@@ -136,7 +141,7 @@ section#social-media {
 }
 div.followers {
   width: 100%;
-  background-color: var(--Light-Grayish-Blue-Card-BG);
+  background-color: var(--Card-BG);
   padding: 25px;
   display: flex;
   flex-direction: column;
@@ -146,12 +151,12 @@ div.followers {
 }
 div.followers:hover,
 .overview-card:hover {
-  background-color: var(--Light-Grayish-Blue-Card-BG-hover);
+  background-color: var(--Card-BG-hover);
   cursor: pointer;
 }
 div.followers.dark:hover,
 .overview-card.dark:hover {
-  background-color: var(--Dark-Desaturated-Blue-Card-BG-hover) !important;
+  background-color: var(--Card-BG-hover) !important;
   cursor: pointer;
 }
 .followers .head {
@@ -161,15 +166,16 @@ div.followers.dark:hover,
   margin-bottom: 20px;
 }
 .followers .head p {
-  color: var(--Dark-Grayish-Blue-Text);
+  color: var(--Pale-Text);
   font-size: 0.9rem;
   font-weight: 600;
 }
 .followers h1 {
   font-size: 4rem;
+  color: var(--Main-Text);
 }
 .followers > p {
-  color: var(--Dark-Grayish-Blue-Text);
+  color: var(--Pale-Text);
   letter-spacing: 5px;
   font-size: 0.9rem;
 }
@@ -231,7 +237,7 @@ div#youtube::before {
 }
 #overview h2 {
   font-size: 1.7rem;
-  color: var(--Dark-Grayish-Blue-Text);
+  color: var(--Pale-Text-white);
   margin-bottom: 25px;
 }
 .social-overview {
@@ -242,7 +248,7 @@ div#youtube::before {
 }
 .overview-card {
   width: 100%;
-  background-color: var(--Light-Grayish-Blue-Card-BG);
+  background-color: var(--Card-BG);
   padding: 20px 15px;
   border-radius: 7px;
 }
@@ -255,7 +261,7 @@ div#youtube::before {
 .overview-card .head p {
   font-size: 0.9rem;
   font-weight: 600;
-  color: var(--Dark-Grayish-Blue-Text);
+  color: var(--Pale-Text);
 }
 .overview-card .body {
   display: flex;
@@ -265,6 +271,7 @@ div#youtube::before {
 }
 .overview-card h3 {
   font-size: 2rem;
+  color: var(--Main-Text);
 }
 .rate {
   display: flex;
@@ -281,6 +288,7 @@ div#youtube::before {
 .attribution {
   font-size: 11px;
   text-align: center;
+  color: var(--Main-Text);
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
@@ -299,7 +307,7 @@ a:visited {
     width: 100%;
     display: block;
     height: 2px;
-    background: var(--Dark-Grayish-Blue-Text);
+    background: var(--Pale-Text);
     margin: 15px 0;
   }
   .swap {
